第一次提交

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "wj008/beacon-standard-edition",
+  "name": "wj008/beacon-standard",
   "description": "The \"Beacon Standard Edition\" distribution",
   "type": "project",
   "license": "Apache-2.0",
